Remove the connection string from appsettings.json.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-P4F61GG7\\SQLEXPRESS;Initial Catalog=StockMarket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": ""
   },
   "AllowedHosts": "*",
   "JWT":{
